@@ -3,7 +3,7 @@
 # Copyright (C) 2010 nineties
 #
 
-# $Id: Makefile 2010-03-26 06:00:53 nineties $
+# $Id: Makefile 2010-03-27 23:14:50 nineties $
 
 AS = as
 ASFLAGS =
@@ -13,8 +13,8 @@ LDFLAGS = --nostdlib --entry=_start
 RLC0 = ../rlc0/rlc
 SOURCES    = startup.rl main.rl stddef.rl stdlib.rl alloc.rl rowllib.rl \
 			 token.rl lex.rl code.rl node.rl parse.rl type.rl typing.rl \
-			 mangle.rl tcodegen.rl proc.rl liveness.rl regalloc.rl asmgen.rl \
-			 pprint.rl
+			 mangle.rl tcodegen.rl proc.rl deadcode.rl liveness.rl regalloc.rl \
+			 asmgen.rl pprint.rl
 
 ASMSOURCES = $(patsubst %.rl,%.s,$(SOURCES))
 OBJECTS    = $(patsubst %.rl,%.o,$(SOURCES))
@@ -34,6 +34,7 @@ typing.s   : $(RLC0) stddef.s code.s
 mangle.s   : $(RLC0) code.s
 tcodegen.s : $(RLC0) stddef.s code.s
 proc.s     : $(RLC0) stddef.s code.s
+deadcode.s : $(RLC0) stddef.s code.s
 liveness.s : $(RLC0) stddef.s code.s
 regalloc.s : $(RLC0) stddef.s code.s
 asmgen.s   : $(RLC0) stddef.s code.s
