@@ -1,7 +1,7 @@
 export
 main: () {
-    x      : (1,(2,4));
-    (_, q) : x;
-    (_, s) : q;
-    syscall(1, s);
+    x      : (1,(2,3));
+    (_, y) : x;
+    (z, _) : y;
+    syscall(1, z);
 }
