@@ -5,6 +5,7 @@
 	    stack-local tuple management
 	    pattern matching for tuple
 	    don't care pattern
+	    deadcode elimination
 
 2010-03-26  nineties <nineties48@gmail.com>
 
